@@ -191,6 +191,8 @@ Unreleased changes (1.0-dev)
 
 66. NUTCH-584 - urls missing from fetchlist (Ruslan Ermilov, ab)
 
+67. NUTCH-580 - Remove deprecated hadoop api calls (FS) (siren)
+
 
 Release 0.9 - 2007-04-02
 
